# nextpex

./: .gitignore  db.go  docker-compose.yml  go.mod  go.sum  reset.sh  schema_sqlite.sql  server.go  sqlite_to_mysql.py
api/: .gitignore  Dockerfile  README.md  db.go  download.sh  go.mod  go.sum  server.go  sqlite_to_mysql.py
api/migrations/: 000001_create_player_table.down.sql  000001_create_player_table.up.sql  000002_create_ingamename_table.down.sql  000002_create_ingamename_table.up.sql  000003_create_levelupdate_table.down.sql  000003_create_levelupdate_table.up.sql  000004_create_levelupdate_index.down.sql  000004_create_levelupdate_index.up.sql  (+12 more)
app/: README.md  pubspec.yaml
app/lib/: api_types.dart  (+5 more)
bot/: .gitignore  Dockerfile  Pipfile  Procfile  requirements.txt
botp/: db.php  main.php
botv2/: .env.sample  Cargo.toml  Dockerfile
botv2/src/: main.rs
botv3/: .gitignore  Bot.cs  Database.cs  Logging.cs  Pipfile  Program.cs  botv3.csproj  check.go  go.mod  go.sum  main.go
dbinit/: 0_schema.sql
fastestserver/: .env.sample  .gitignore  Cargo.toml  Dockerfile
fastestserver/src/: db.rs  main.rs  types.rs
fastserver/: .gitignore  Makefile  go.mod  go.sum  main.go  migration.go  migration.go.xx  psql_schema.sql  schema.sql  schema_sqlite.sql  types.go
front/: .eslintrc.js  Dockerfile  chart.css  check.css  check.html  index.html  level.html  menu.css  package-lock.json  package.json  rank.html  sw.js  tsconfig.json  webpack.config.js
frontend/: package-lock.json  package.json
frontend-v2/: index.html  package-lock.json  package.json
initdb.d/: 0_CREATE_TABLE.sql
migrator/: .gitignore  go.mod  go.sum  postgres.go
nextpex-frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json
watcher/: .env_sample  .gitignore  Dockerfile  README.md  cronjob.sh  crontab.txt  entry.sh  go.mod  go.sum  main.go
web/: .gitignore  Dockerfile  LICENSE  begin.sh  manage.py  requirements.txt
(+137 files in other folders)
