[package]
name = "nextpex_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.21.6", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.22"
serde = "1.0.144"
serde_json = "1.0.85"
