[package]
name = "nextpex_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.22"
serde = "1.0.144"
serde_json = "1.0.85"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
rusqlite = { version = "0.28.0", features = ["bundled"] }
zmq = "0.9.2"
