[package]
name = "fastestserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
derive_more = "0.99.17"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
redis = { version = "0.21.6", features = ["tokio-comp"] }
log = "0.4.17"
env_logger = "0.9.0"
