[package]
name = "fastestserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.17"
log = "0.4.17"
env_logger = "0.9.0"
zmq = "0.9.2"
awc = "3.0.1"
